--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,31 @@ out/
 *.iml
 .idea/
 
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+.DS_Store
+
+*.xml
+
+commandsForGit
+
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
