--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,12 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>hw2</module>
-        <module>hw1</module>
-        <module>hw3</module>
-        <module>hw4</module>
-        <module>hw5</module>
+        <module>hw2 - fileReader</module>
+        <module>hw1 - candies</module>
+        <module>hw3 - fromJSON</module>
+        <module>hw4 - firstSberTest (Alex)</module>
+        <module>hw5 - secondSberTest(Stas)</module>
+        <module>hw6_PageObject</module>
     </modules>
 
     <dependencies>
@@ -55,5 +56,30 @@
             <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
