--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <version>4.13</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.11</version>
+        </dependency>
     </dependencies>
 
     <build>
