--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,15 @@
     <artifactId>Aplana</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>hw2 - fileReader</module>
-        <module>hw1 - candies</module>
-        <module>hw3 - fromJSON</module>
-        <module>hw4 - firstSberTest (Alex)</module>
-        <module>hw5 - secondSberTest(Stas)</module>
-        <module>hw7restTest</module>
-        <module>hw8 - allure+cucumber</module>
-    </modules>
+<!--    <modules>-->
+<!--        <module>hw1 - candies</module>-->
+<!--        <module>hw2 - fileReader</module>-->
+<!--        <module>hw3 - fromJSON</module>-->
+<!--        <module>hw4 - firstSberTest (Alex)</module>-->
+<!--        <module>hw5 - secondSberTest(Stas)</module>-->
+<!--        <module>hw7restTest</module>-->
+<!--        <module>hw8 - allure+cucumber</module>-->
+<!--    </modules>-->
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
@@ -72,6 +72,12 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.11</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
